noinst_LIBRARIES = libHyParFunctions.a
libHyParFunctions_a_SOURCES = \
  ApplyBoundaryConditions.c \
  ApplyIBConditions.c \
  BoundaryIntegral.c \
  CalculateError.c \
  CalculateConservationError.c \
	ComputeRHSOperators.c \
  ExactSolution.c \
  HyperbolicFunction.c \
  IncrementFilename.c \
  NonLinearInterpolation.c \
  ParabolicFunctionCons1Stage.c \
  ParabolicFunctionNC1Stage.c \
  ParabolicFunctionNC2Stage.c \
  ParabolicFunctionNC1.5Stage.c \
  SourceFunction.c \
  VolumeIntegral.c
