noinst_LIBRARIES = libPETScFunctions.a
libPETScFunctions_a_SOURCES = \
  PetscCleanup.cpp \
  PetscComputePreconMatIMEX.cpp \
  PetscComputePreconMatImpl.cpp \
  PetscCreatePointList.cpp \
  PetscGlobalDOF.cpp \
  PetscError.cpp \
  PetscIFunctionImpl.cpp \
  PetscIFunctionIMEX.cpp \
  PetscIJacobian.cpp \
  PetscIJacobianIMEX.cpp \
	PetscJacobianMatNonzeroEntriesImpl.cpp \
  PetscPostStage.cpp \
  PetscPostTimeStep.cpp \
  PetscPreStage.cpp \
  PetscPreTimeStep.cpp \
  PetscRegisterTIMethods.cpp \
  PetscRHSFunctionExpl.cpp \
  PetscRHSFunctionIMEX.cpp \
	PetscSetInitialGuessROM.cpp \
  TransferFromPETSc.cpp \
  TransferToPETSc.cpp
