noinst_LIBRARIES = libSimulation.a
libSimulation_a_SOURCES = \
  Cleanup.c \
	CombineSolutions.c \
	EnsembleSimulationsDefine.cpp \
  Initialize.c \
  InitializeBoundaries.c \
  InitializeImmersedBoundaries.c \
  InitializePhysics.c \
  InitializePhysicsData.c \
  InitializeSolvers.c \
  InitialSolution.c \
	libROMInterface.cpp \
  OutputSolution.c \
  ReadInputs.c \
  SimulationWriteErrors.c \
	SingleSimulationDefine.cpp \
  Solve.cpp \
  SolvePETSc.c \
  WriteInputs.c
