noinst_LIBRARIES = libSparseGrids.a
libSparseGrids_a_SOURCES = \
	SparseGridsCombinationTechnique.cpp \
	SparseGridsDefine.cpp \
  SparseGridsInitialize.cpp \
  SparseGridsInitialSolution.cpp \
  SparseGridsInterpolate.cpp \
  SparseGridsInterpolateGrid.cpp \
  SparseGridsMiscFuncs.cpp \
  SparseGridsOutputSolution.cpp \
  SparseGridsSanityChecks.cpp \
	SparseGridsSolve.cpp \
	SparseGridsSetSolverParameters.cpp
