noinst_LIBRARIES = libSparseGrids.a
libSparseGrids_a_SOURCES = \
	SparseGridsCalculateError.cpp \
	SparseGridsCombinationTechnique.cpp \
	SparseGridsDefine.cpp \
	SparseGridsFillGhostCells.cpp \
  SparseGridsInitializationWrapup.cpp \
  SparseGridsInitialize.cpp \
  SparseGridsInitialSolution.cpp \
  SparseGridsInterpolate.cpp \
  SparseGridsInterpolateGrid.cpp \
  SparseGridsMiscFuncs.cpp \
  SparseGridsOutputSolution.cpp \
  SparseGridsSanityChecks.cpp \
	SparseGridsSolve.cpp \
	SparseGridsSetSolverParameters.cpp \
	SparseGridsWriteErrors.cpp
