noinst_LIBRARIES = libLinearADR.a
libLinearADR_a_SOURCES = \
  LinearADRAdvection.c \
  LinearADRAdvectionField.c \
  LinearADRCleanup.c \
  LinearADRComputeCFL.c \
  LinearADRComputeDiffNumber.c \
  LinearADRDiffusion.c \
  LinearADRInitialize.c \
  LinearADRJacobian.c \
  LinearADRReaction.c \
  LinearADRUpwind.c \
	LinearADRWriteAdvField.c
