noinst_LIBRARIES = libVlasov.a
libVlasov_a_SOURCES = \
  VlasovAdvection.c \
  VlasovAdvectionCoeff.c \
  VlasovCleanup.c \
  VlasovComputeCFL.c \
  VlasovEField.c \
	VlasovFunctions.c \
  VlasovInitialize.c \
  VlasovUpwind.c \
  VlasovPlotSpatialField.c \
  VlasovWriteSpatialField.c \
	VlasovWriteEFieldAndPotential.c
